# raylib-sandbox

./: .gitignore  CMakeLists.txt
assets/maps/: test.json
lib/cute_tiled/: cute_tiled.h
lib/stb/: stb.h
resources/: atlas.rtpa
resources/maps/tilesets/: shadows.tsx  trees.tsx
sources/: common.h
sources/game/: camera.h  ecs_systems.c  ecs_systems.h  game.c  game.h  movement.c  movement.h  systems.c  systems.h
sources/game/collision/: collision.c  collision.h  collision_handlers.c  collision_handlers.h  collision_query.c  collision_query.h
sources/game/systems/: ecs_systems.c  ecs_systems.h  sys_animation.c  sys_bounce_in_bounds.c  sys_integrate_velocity.c  sys_move_platformer.c  sys_scale_return.c
sources/platform/: platform.c  resource_dir.h
sources/shared/: arena.c  arena.h  assets.c  assets.h  components.h  ecs_components.h  ecs_setup.c  ecs_setup.h  ecs_world.c  ecs_world.h  raytmx.h  world.c  world.h
src/: assets.c  assets.h  gui_utils.h  main.c  tilemap.c  tilemap.h  world.c  world.h
